# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//targets/mimxrt595_evk_freertos:binary.bzl", "mimxrt595_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "bluetooth",
    srcs = ["main.cc"],
    deps = [
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_log",
        "@pigweed//pw_system:pw_system",
        "@pigweed//pw_system:work_queue",
        "@pigweed//pw_bluetooth:pw_bluetooth",
        "@pigweed//targets/mimxrt595_evk_freertos:boot",
        "@mcuxpresso_sdk//:sdk",
    ],
)

mimxrt595_binary(
    name = "bluetooth.elf",
    binary = ":bluetooth",
)

