# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_build:pigweed.bzl",
    "pw_cc_test",
)
load("//targets:transition.bzl", "rp2040_binary", "stm32_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bitops",
    srcs = ["bitops.cc"],
    hdrs = ["public/bitops.h"],
    includes = ["public"],
)

pw_cc_test(
    name = "bitops_test",
    srcs = ["bitops_test.cc"],
    # Remove the manual tag to run this test automatically as part of 'bazel
    # test' on the host.
    tags = ["manual"],
    # Otherwise run:
    #   bazel test //examples/02_unit_testing:bitops_test
    deps = [":bitops"],
)

cc_binary(
    name = "test_runner_app",
    testonly = True,
    srcs = ["main.cc"],
    malloc = select({
        "@pico-sdk//bazel/constraint:rp2": "@pigweed//pw_malloc",
        "@platforms//cpu:armv7e-m": "@pigweed//pw_malloc",
        "//conditions:default": "@bazel_tools//tools/cpp:malloc",
    }),
    deps = [
        ":bitops_test.lib",
        "@pigweed//pw_assert:backend_impl",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_log",
        "@pigweed//pw_log:backend_impl",
        "@pigweed//pw_system:init",
        "@pigweed//pw_system:io",
        "@pigweed//pw_system:rpc_server",
        "@pigweed//pw_system:target_hooks",
        "@pigweed//pw_system:work_queue",
        "@pigweed//pw_unit_test:rpc_service",
    ] + select({
        "@pico-sdk//bazel/constraint:rp2": [
            "@pico-sdk//src/common/pico_stdlib:pico_stdlib",
            "@pigweed//pw_tokenizer:linker_script",
            "@pigweed//pw_toolchain/arm_gcc:arm_none_eabi_gcc_support",
            "@pigweed//targets/rp2040:pre_init",
        ],
        "@platforms//cpu:armv7e-m": [
            "//targets/stm32f429i_disc1_stm32cube:linker_script",
            "@pigweed//pw_tokenizer:linker_script",
            "@pigweed//pw_toolchain/arm_gcc:arm_none_eabi_gcc_support",
            "@pigweed//targets/stm32f429i_disc1_stm32cube:pre_init",
        ],
        "//conditions:default": [
            "@pigweed//targets/host_device_simulator:boot",
        ],
    }),
)

stm32_binary(
    name = "test_runner_app.elf",
    testonly = True,
    binary = ":test_runner_app",
)

rp2040_binary(
    name = "rp2040_test_runner_app.elf",
    testonly = True,
    binary = ":test_runner_app",
)
