# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_build:pigweed.bzl",
    "pw_cc_test",
)
load("//targets:transition.bzl", "rp2040_binary", "stm32_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bitops",
    srcs = ["bitops.cc"],
    hdrs = ["public/bitops.h"],
    includes = ["public"],
)

pw_cc_test(
    name = "bitops_test",
    srcs = ["bitops_test.cc"],
    # Remove the manual tag to run this test automatically as part of 'bazel
    # test' on the host.
    tags = ["manual"],
    # Otherwise run:
    #   bazel test //examples/02_unit_testing:bitops_test
    deps = [":bitops"],
)

cc_binary(
    name = "test_runner_app",
    testonly = True,
    srcs = ["main.cc"],
    deps = [
        ":bitops_test.lib",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_log",
        "@pigweed//pw_system",
        "@pigweed//pw_unit_test:rpc_service",
    ],
)

stm32_binary(
    name = "test_runner_app.elf",
    testonly = True,
    binary = ":test_runner_app",
)

rp2040_binary(
    name = "rp2040_test_runner_app.elf",
    testonly = True,
    binary = ":test_runner_app",
)
