# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_tokenizer/database.gni")
import("$dir_pw_unit_test/test.gni")

config("public_include_dirs") {
  include_dirs = [ "public" ]
}

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}

pw_executable("test_runner_app") {
  sources = [ "main.cc" ]
  deps = [
    ":bitops_test.lib",
    "$dir_pw_system:pw_system",
    "$dir_pw_system:rpc_server",
    "$dir_pw_unit_test:rpc_service",
  ]
}

pw_source_set("bitops") {
  public = [ "public/bitops.h" ]
  public_configs = [ ":public_include_dirs" ]
  sources = [ "bitops.cc" ]
}

pw_test("bitops_test") {
  deps = [ ":bitops" ]
  sources = [ "bitops_test.cc" ]
}

pw_test_group("tests") {
  tests = [ ":bitops_test" ]
}
