
load("//targets/mimxrt595_evk_freertos:transition.bzl", "mimxrt595_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "usb_fastboot",
    srcs = [
        "main.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:wrap_time_system_clock",
        "@pigweed//pw_system:pw_system",
        "@pigweed//third_party/mcuxpresso:mcuxpresso_sdk",
        "@pigweed//pw_digital_io_mcuxpresso",
        "@pigweed//pw_log",
        "//config:init_peripherals",
        "//lib/pw_fastboot_usb_mcuxpresso",
    ],
)

mimxrt595_binary(
    name = "usb_fastboot.elf",
    binary = ":usb_fastboot",
)

