load("@pigweed//pw_fastboot:binary.bzl", "pw_fastboot_binary")
load("//targets/mimxrt595_evk_freertos:transition_bootloader.bzl", "mimxrt595_bootloader_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "usb_fastboot",
    srcs = [
        "main.cc",
        "flash.h",
        "flash.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:wrap_time_system_clock",
        "@pigweed//pw_system:pw_system",
        "@pigweed//third_party/mcuxpresso:mcuxpresso_sdk",
        "@pigweed//pw_digital_io_mcuxpresso",
        "@pigweed//pw_log",
        "@pigweed//third_party/aosp:libsparse",
        "//config:init_peripherals",
        "//lib/pw_fastboot_usb_mcuxpresso",
        "//targets/mimxrt595_evk_freertos:fastboot_defines",
        "@pigweed//pw_flash",
        "@pigweed//pw_flash_mcuxpresso",
    ],
)

mimxrt595_bootloader_binary(
    name = "usb_fastboot.elf",
    binary = ":usb_fastboot",
)

pw_fastboot_binary(
    name = "usb_fastboot.fastboot",
    executable = ":usb_fastboot.elf",
    remove_sections = [
        ".flash_config",
    ],
)
