import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_third_party/mcuxpresso/mcuxpresso.gni")

group("all") {
  deps = [ ":usb_cdc_vcom" ]
}

if (pw_third_party_mcuxpresso_SDK != "") {
  config("fastboot_include_paths") {
    include_dirs = [
      "."
    ]
    visibility = [ ":*" ]
  }

  config("thirdparty_include_paths") {
    include_dirs = [
      "./third_party/"
    ]
    visibility = [ ":*" ]
  }

  pw_executable("usb_fastboot") {
    sources = [
      "main.cc",
      "third_party/usb_device_descriptor.c",
      "third_party/virtual_com.c",
      "third_party/usb_device_cdc_acm.c",
      "third_party/usb_device_ch9.c",
      "third_party/usb_device_class.c"
    ]
    deps = [
      "$dir_pw_system:pw_system",
      "$pw_third_party_mcuxpresso_SDK",
    ]
    configs = [
      ":fastboot_include_paths",
      ":thirdparty_include_paths"
    ]
  }
}
