# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_protobuf_compiler/proto.gni")

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}

config("public_includes") {
  include_dirs = [ "public" ]
}

pw_executable("rpc_main") {
  sources = [ "main.cc" ]
  deps = [
    ":rpc_example_service_nanopb",
    "$dir_pw_system:pw_system",
    "$dir_pw_system:rpc_server",
  ]
}

pw_proto_library("rpc_example_protos") {
  sources = [ "rpc_example_protos/rpc_example_service.proto" ]
  inputs = [ "rpc_example_protos/rpc_example_service.options" ]
  deps = [ "$dir_pw_protobuf:common_protos" ]
}

pw_source_set("rpc_example_service_nanopb") {
  public_configs = [ ":public_includes" ]
  public_deps = [ ":rpc_example_protos.nanopb_rpc" ]
  public = [ "public/rpc_example/rpc_example_service_nanopb.h" ]
  deps = [
    ":rpc_example_protos.nanopb_rpc",
    "$dir_pw_log:pw_log",
    "$dir_pw_sync:mutex",
  ]
  sources = [ "rpc_example_service_nanopb.cc" ]
}
