# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "pw_proto_filegroup",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

pw_proto_filegroup(
    name = "rpc_example_protos_filegroup",
    srcs = ["rpc_example_protos/rpc_example_service.proto"],
    options_files = ["rpc_example_protos/rpc_example_service.options"],
)

proto_library(
    name = "rpc_example_protos",
    srcs = ["rpc_example_protos_filegroup"],
    strip_import_prefix = "/examples/03_rpc",
    deps = ["@pigweed//pw_protobuf:common_proto"],
)

py_proto_library(
    name = "rpc_example_protos_py_pb2",
    tags = ["manual"],
    deps = [":rpc_example_protos"],
)
