load("@pigweed//pw_fastboot:binary.bzl", "pw_fastboot_binary")
load("//targets/mimxrt595_evk_freertos:transition.bzl", "mimxrt595_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "user_hello",
    srcs = [
        "main.cc",
    ],
    deps = [
        "//config:init_peripherals",
        "//targets/mimxrt595_evk_freertos:fastboot_defines",
        "@pigweed//pw_assert",
        "@pigweed//pw_chrono:wrap_time_system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_system",
        "@pigweed//third_party/mcuxpresso:mcuxpresso_sdk",
    ],
)

mimxrt595_binary(
    name = "user_hello.elf",
    binary = ":user_hello",
)

pw_fastboot_binary(
    name = "user_hello.fastboot",
    executable = ":user_hello.elf",
    remove_sections = [
        ".flash_config",
    ],
)
