# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_tokenizer/database.gni")
import("$dir_pw_third_party/mcuxpresso/mcuxpresso.gni")

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}

group("all") {
  deps = [ ":bluetooth" ]

  # Build tokenizer_database for elf binaries only
  if (host_os == "linux" || current_toolchain != "//targets/host:host_debug") {
    deps += [ ":tokenizer_database" ]
  }
}

if (pw_third_party_mcuxpresso_SDK != "") {
  pw_executable("bluetooth") {
    sources = [ "main.cc" ]
    deps = [
      "$dir_pw_chrono:system_clock",
      "$dir_pw_chrono:system_timer",
      "$dir_pw_log:pw_log",
      "$dir_pw_system:pw_system",
      "$dir_pw_system:work_queue",
      "$dir_pw_bluetooth:pw_bluetooth",
      "$pw_third_party_mcuxpresso_SDK",
    ]
  }
} else {
  pw_executable("bluetooth") {
    sources = [ "main.cc" ]
    deps = [
      "$dir_pw_chrono:system_clock",
      "$dir_pw_chrono:system_timer",
      "$dir_pw_log:pw_log",
      "$dir_pw_system:pw_system",
      "$dir_pw_system:work_queue",
      "$dir_pw_bluetooth:pw_bluetooth",
    ]
  }
}

pw_tokenizer_database("tokenizer_database") {
  database = "tokenizer_database.csv"
  targets = [ ":bluetooth" ]
}
