# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//targets/mimxrt595_evk_freertos:transition.bzl", "mimxrt595_binary")
load("@pigweed//pw_fastboot:binary.bzl", "pw_fastboot_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "bluetooth_audio",
    srcs = [
        "main.cc",
    ],
    deps = [
        "@pigweed//pw_chrono:wrap_time_system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_sync:thread_notification",
        "@pigweed//pw_system:pw_system",
        "@pigweed//pw_bluetooth_sapphire/host:stack",
        "@pigweed//pw_intrusive_ptr:pw_intrusive_ptr",
        "@pigweed//pw_async_basic:dispatcher",
        "@pigweed//pw_bluetooth_sapphire_mcuxpresso:bluetooth_sapphire_mcuxpresso",
        "@pigweed//third_party/mcuxpresso:mcuxpresso_sdk",
        "@pigweed//pw_random",
        "//config:init_peripherals",
        "//examples/04_bluetooth_audio/zephyr_bt_profiles_port:a2dp_profile",
    ],
    copts = [
        "-Wno-missing-field-initializers",
        "-Wno-changes-meaning",
        "-Wno-shadow",
        "-Wno-error",
    ],
)

mimxrt595_binary(
    name = "bluetooth_audio.elf",
    binary = ":bluetooth_audio",
)

pw_fastboot_binary(
    name = "bluetooth_audio.fastboot",
    executable = ":bluetooth_audio.elf",
    remove_sections = [
        ".flash_config",
    ],
)
