package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pw_fastboot",
    srcs = [
        "commands.cc",
        "device_variable.cc",
        "fastboot_device.cc",
    ],
    hdrs = [
        "public/pw_fastboot/commands.h",
        "public/pw_fastboot/constants.h",
        "public/pw_fastboot/device_hal.h",
        "public/pw_fastboot/device_variable.h",
        "public/pw_fastboot/fastboot_device.h",
        "public/pw_fastboot/transport.h",
    ],
    includes = [
        "public/",
    ],
    deps = [
        "//lib/stringutils",
        "@pigweed//pw_log",
    ],
)
