# Comment this import to prevent it from being reordered.
import("//build_overrides/pigweed.gni")

import("$dir_pw_arduino_build/arduino.gni")
import("$dir_pw_build/target_types.gni")

pw_executable("blink") {
  sources = [ "main.cc" ]
  deps = [ "$dir_pw_log" ]
  if (dir_pw_third_party_arduino != "") {
    remove_configs = [ "$dir_pw_build:strict_warnings" ]
    deps += [ "$dir_pw_third_party_arduino:arduino_core_sources" ]
  }
}
