# Comment this import to prevent it from being reordered.
import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")
config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("simple_counter") {
  public_configs = [ ":default_config" ]
  public = [ "public/simple_counter/simple_counter.h" ]
  sources = [ "simple_counter.cc" ]
}

# Example of a single test. Normally modules have multiple tests, each declared
# with `pw_test`.
pw_test("simple_counter_test") {
  deps = [ ":simple_counter" ]
  sources = [ "simple_counter_test.cc" ]
}

# Each module should have its own test group, composed of the different targets
# declared with `pw_test`.
pw_test_group("tests") {
  tests = [ ":simple_counter_test" ]
}
