# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")
config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("simple_counter") {
  public_configs = [ ":default_config" ]
  public = [ "public/simple_counter/simple_counter.h" ]
  sources = [ "simple_counter.cc" ]
}

# Example of a single test. Normally modules have multiple tests, each declared
# with `pw_test`.
pw_test("simple_counter_test") {
  deps = [ ":simple_counter" ]
  sources = [ "simple_counter_test.cc" ]
}

# Each module should have its own test group, composed of the different targets
# declared with `pw_test`.
pw_test_group("tests") {
  tests = [ ":simple_counter_test" ]
}
